[package]
name = "rusty_raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12.3"
prost-types = "0.12.3"
tonic = { version = "0.11.0", features = ["transport"] }
log = "0.4"
env_logger = "0.11.2"
protobuf = "3.4.0"
rand_core = "0.6.4"
anyhow = "1.0.80"

[build-dependencies]
tonic-build = "0.11"
